# dezero-from-scratch

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
dezero/: __init__.py  core.py  core_simple.py  functions.py  utils.py
src/dezero/: __init__.py  core.py  dataloaders.py  datasets.py  functions.py  layers.py  models.py  optimizers.py  utils.py
steps/: step01.py  step02.py  step03.py  step04.py  step06.py  step07.py  step08.py  step09.py  step10.py  step13.py  step14.py  step16.py  step17.py  step18.py  step19.py  step20.py  step21.py  step22.py  step23.py  step24.py  step26.py  step27.py  step28.py  step29.py  step33.py  step34.py  step35.py  step36.py  step37.py  step38.py  step39.py  step42.py  step43.py  step44.py  step45.py  step46.py  step47.py  step48.py  step49.py  step50.py  (+8 more)
tests/: test_basic_math.py  test_broadcast.py
